src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: javaee-devmeetup-service
spec:
  selector:
    app: javaee-devmeetup
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11080
